--- a/skrynai.css
+++ b/skrynai.css
@@ -67,6 +67,7 @@ h2{
   font-family: var(--accentFont);
   text-transform: uppercase;
   font-size: 36px;
+  line-height: 36px;
 }
 p{
   font-family: Arial, Helvetica, sans-serif;
@@ -135,6 +136,12 @@ section.values{
   align-items: center;
 
 }
+/* .values-content-right{
+  max-width: 30%;
+} */
+
+
+
 section.history{
   margin-top: 70px;
 }
@@ -164,6 +171,10 @@ section.program{
 min-height: 150px;
 margin-top: 120px;
 }
+.program-subheading{
+  margin-top: -15px;
+  margin-bottom: 20px;
+}
 .program p{
   margin: 10px 0;
 }
@@ -172,8 +183,9 @@ margin-top: 120px;
 }
 .discussion-image{
   position: absolute;
-  bottom:-70px;
+  bottom:-150px;
   right: 0px;
+  scale: 1.1
 }
 
 .horizontal-wave{
@@ -185,6 +197,72 @@ margin-top: 120px;
   margin-top:-110px;
   scale: 0.8;
 }
-section.join{
+
+section.partners{
   margin-top: 150px;
+background-image: url(./images/grey\ bg.jpg);
+
+  padding: 100px 50px 50px 50px;
+  color: var(--grey);
+}
+.partners h2{
+  color:var(--PrimaryColor);
+  text-align: center;
+}
+.partners-logos{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+.partners img{
+  max-width: 150px;
+  max-height: 100px;
+}
+
+section.join{
+
+  flex-direction: column;
+  background-color: var(--PrimaryColor);
+  padding-top: 50px;
+}
+.join h2{
+  color: var(--grey);
+  text-align: center;
+}
+.join h3{
+  color: var(--SecondaryColor);
+  font-family: var(--accentFont);
+  font-weight: 700;
+   text-align: center;
+   font-size: 24px;
+   text-transform: uppercase;
+}
+.join p{
+  color:var(--white)
+}
+.join-contents{
+  width: 100%;
+  display: flex;
+  gap: 80px;
+}
+.join-left{
+  /* background-color: var(--SecondaryColor); */
+  width: 50%;
+  padding: 20px;
+}
+.join-right{
+  width: 50%;
+   padding: 20px;
+   color: var(--grey);
+   font-family: Arial, Helvetica, sans-serif;
+}
+.join-left p{
+ color: var(--grey);
+ text-align: center;
+ margin-top: 30px;
+}
+.join-right li{
+  margin-top:20px;
+  font-size: 18px;
 }
