--- a/skrynai.css
+++ b/skrynai.css
@@ -118,8 +118,8 @@ img.hero-seagull-img {
   position: absolute;
   bottom: 10px;
   right: 10%;
-  /* height: 100%; */
-  width: 50%;
+  /* height: 80%; */
+  width: 40%;
   min-width: 420px;
   z-index: 3;
 }
@@ -127,11 +127,13 @@ img.hero-seagull-img {
   position: absolute;
   bottom: -155px;
   z-index: 10;
+  display: flex;
 }
-.horizontal-wave svg {
+.horizontal-wave img {
   margin-top: -110px;
   scale: 1;
-  /* width: 100%; */
+  width: 100vw;
+  height: 250px;
 }
 .hero-btns {
   display: flex;
@@ -339,6 +341,11 @@ section.join {
   color: var(--PrimaryColor);
 }
 /* Media */
+@media only screen and (max-width: 1600px) {
+img.hero-seagull-img {
+  width: 50%;
+}
+}
 @media only screen and (max-width: 750px) {
   h1 {
     font-size: 60px;
@@ -399,12 +406,15 @@ section.join {
     z-index: 1;
     rotate: -45deg;
   }
-  .horizontal-wave {
-    bottom: -100px;
-    max-width: 100%;
-    scale: 0.55;
+  .horizontal-wave{
+    bottom: -70px;
     left: 0;
   }
+   .horizontal-wave img{
+        width: 100vw;
+    height: 50%;
+   }
+
   section.values {
     margin-top: 100px;
   }
