--- a/skrynai.css
+++ b/skrynai.css
@@ -273,15 +273,24 @@ section.partners {
 }
 .partners-logos {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   margin-top: 20px;
-  gap: 10px;
+  gap: 50px;
   flex-wrap: wrap;
 }
 .partners img {
   max-width: 150px;
-  max-height: 100px;
+  max-height: 80px;
+}
+.logos{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.sponsors{
+gap: 40px;
 }
 .seperator {
   width: 100%;
