added logo, fixed logo style bug

--- a/skrynai.css
+++ b/skrynai.css
@@ -304,7 +304,7 @@ section.partners {
 .partners img {
   max-width: 150px;
   max-height: 150px;
-  min-width: 120px;
+  /* min-width: 120px; */
 }
 .logos{
   display: flex;
